--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -15,9 +15,9 @@
                 </div>
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Home</a></li>
-                    <li><a href="?/c=gestionClient&a=chercheUn">Voir un client</a></li>
-                    <li><a href="?/c=gestionClient&a=chercheTous">Voir tous les clients</a></li>
-                    <li><a href="?/c=gestionClient&a=creerClient">Créer un client</a></li>
+                    <li><a href="/?c=gestionClient&a=chercheUn">Voir un client</a></li>
+                    <li><a href="/?c=gestionClient&a=chercheTous">Voir tous les clients</a></li>
+                    <li><a href="/?c=gestionClient&a=creerClient">Créer un client</a></li>
                 </ul>
             </div>
         </nav>
