--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -18,6 +18,7 @@
                     <li><a href="/?c=gestionClient&a=chercheUn">Voir un client</a></li>
                     <li><a href="/?c=gestionClient&a=chercheTous">Voir tous les clients</a></li>
                     <li><a href="/?c=gestionClient&a=creerClient">Créer un client</a></li>
+                    <li><a href="/?c=gestionClient&a=testFindBy">Tester find</a></li>
                 </ul>
             </div>
         </nav>
